# SWGOH-Mod-Squad

./: .flaskenv  .gitattributes  .gitignore  FAQ.md  README.md  amazon.py  build_site.py  install.sh  mod_squad.py  pyproject.toml
app/: __init__.py  db.py  index.py  requirements.txt  users.py
app/controllers/: admins.py  index.py  users.py
app/models/: campaign.py  event.py  profile.py  user.py
app/models/stats/: user.py
app/templates/: admin.html  base.html  index.html  login.html  profile.html  register.html  users.html
app/utils/: swgoh.py
db/: README.md  create.sql  load.sql  setup.sh
db/data/: Campaigns.csv  Events.csv  GamePlay.csv  Users.csv
docker/: README.md  compose.yml
docker/docker/ubuntu/: install.sh
docs/: README.md  admin  index.html  login  logout  register
tests/E2E/: config.py  test_header.py
